Fix mobile spacing main page

--- a/src/Components/MainPage/MainPage.scss
+++ b/src/Components/MainPage/MainPage.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     user-select: none;
 }
 
@@ -11,7 +11,7 @@
     position: absolute;
     top:0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-image: url("../../assets/new12.jpg");
     background-position: center;
     background-size: cover;
@@ -29,6 +29,7 @@
     top: 72vh;
     font-size: 32px;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-backface-visibility: hidden;
 
     p {
         padding-top: 20px;
